<resources>
    <string name="app_name">starbucks</string>
    <string name="cards">CARDS</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="Checkout">checkout</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="card_number">card number</string>
    <string name="add_card">Add Card</string>
    <string name="checkout">Checkout</string>
    <string name="current_balance">Current Balance</string>
    <string name="as_of_today_at">As of today at</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="all_cards">All Cards</string>
    <string name="enter_starbucks_card_number">Enter Starbucks Card Number</string>
    <string name="set_as_active_card">Set as active card</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="_3_digit_code">3 digit code</string>
    <string name="_12_66">$ 12.66</string>
    <string name="delete">DELETE</string>
    <string name="all_cards1">All Cards</string>
    <string name="user_name">User Name</string>
    <string name="view_transactions">View Transactions</string>
    <string name="settings">Settings</string>
    <string name="application_information">Application Information</string>
    <string name="add_starbucks_card">Add Starbucks card</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about">About</string>
    <string name="billing_information">Billing Information</string>
    <string name="delete_starbucks_card">Delete Starbucks Card</string>
    <string name="manage">Manage</string>

    <string name="menu">MENU</string>
    <string name="price">Price (in $)</string>
    <string name="item_name">Item Name</string>
    <string name="menuItemOne">Caffe Mocha Venti</string>
    <string name="menuItemTwo">Caramel Frappuccino Grande</string>
    <string name="menuItemThree">Freshly Brewed Coffee</string>
    <string name="menuItemFour">Coffee Frappuccino</string>
    <string name="menuItemFive">Mocha Frappuccino</string>
    <string name="itemPriceOne">4.65</string>
    <string name="itemPriceTwo">4.45</string>
    <string name="itemPriceThree">1.85</string>
    <string name="itemPriceFour">3.25</string>
    <string name="itemPriceFive">3.95</string>
    <string name="place_order">Place Order</string>
    <string name="title_activity_order_details">activity_order_details</string>
    <string name="checkout_order">Checkout</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_price">Total Price</string>

</resources>
