<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/itemsView"
    >

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/StarbucksDarkGreen"
        app:itemIconTint="@color/White"
        app:itemTextColor="@color/AntiqueWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/menuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:text="@string/menu"
        android:textColor="@color/DarkGreen"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menuTextView"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif"
        android:text="@string/item_name"
        android:textColor="@color/DarkGreen"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/itemNameTextView"
        android:layout_alignBottom="@+id/itemNameTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/price"
        android:textColor="@color/DarkGreen"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/placeOrderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@color/DarkGreen"
        android:text="@string/place_order"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="25dp" />



</RelativeLayout>
